<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.prm_project.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.prm_project.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_booking"
        android:name="com.example.prm_project.ui.booking.BookingFragment"
        android:label="@string/title_booking"
        tools:layout="@layout/fragment_booking" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.prm_project.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_edit_profile"
        android:name="com.example.prm_project.ui.profile.EditProfileFragment"
        android:label="@string/title_edit_profile"
        tools:layout="@layout/fragment_edit_profile" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.prm_project.ui.profile.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_booking_history"
        android:name="com.example.prm_project.ui.bookings.BookingHistoryFragment"
        android:label="Lịch sử thuê xe"
        tools:layout="@layout/fragment_booking_history" />
</navigation>